--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,11 +6,13 @@
   display: flex;
   justify-content: space-around;
   padding: 1rem;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.2s ease, color 0.2s ease;
+  background-color: rgb(54, 48, 48);
+  color: white;
 }
 
 .navbar.black {
-  background-color: black;
+  background-color: rgb(54, 48, 48);
   color: white;
 }
 
@@ -27,4 +29,10 @@
 
 .navbar a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    display: none; /* Show footer in mobile view */
+  }
 }
