--- a/src/styles/ScrollIndicator.css
+++ b/src/styles/ScrollIndicator.css
@@ -1,15 +1,28 @@
 .scroll-indicator-container {
   position: fixed;
-  top: 0;
-  right: 0;
-  width: 10px;
-  height: 100%;
+  top: 65px;
+  width: 100%;
+  height: 10px;
   background: rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
 
 .scroll-indicator {
-  width: 100%;
+  height: 100%;
   background: #35a0e7;
-  transition: height 0.25s ease-out;
+  transition: width 0.25s ease-out, height 0.25s ease-out;
+}
+
+@media (max-width: 768px) {
+  .scroll-indicator-container {
+    top: 0;
+    right: 0;
+    width: 15px;
+    height: 100%;
+  }
+  .scroll-indicator {
+    width: 100%;
+    height: 0;
+    transition: height 0.25s ease-in-out;
+  }
 }
