--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,8 +17,7 @@ html {
   height: 100%;
   width: 100%;
   right: 0;
-  background: url(./assets/nnnoise.svg);
-  animation: shimmer 5s infinite;
+  background: url(/nnoise-41277253.svg);
 }
 
 .body {
